--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -384,59 +384,94 @@
   </div>
 </div>
 
-<div [ngStyle]="{'display': isModalOpen('ViewMedicalRecord') ? 'block' : 'none'}" id="ViewMedicalRecord"  class="modal">
-  <div class="modal-content">   
-    <span (click)="closeModal('ViewMedicalRecord')" class="close">&times;</span>     
-
-   
-    <div class="d-flex" style="gap: 20px;"> 
-
- 
-      <div style="flex: 1; max-width: 50%; margin-left: 5cm;">
-        <div class="input-group">
-          <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
-          <span class="input-group-text" id="add">Allergies</span>
-        </div>
-        <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Name</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let request of allergiesList; let i = index" (click)="selectAllergie(request.id)" [ngClass]="{ 'selected-row': selectedAllergie === request.id }">
-              <td>{{ i + 1 }}</td>            
-              <td>{{ request }}</td>                 
-            </tr>
-          </tbody>
-        </table>
-      </div>
 
     
-      <div class="flex-fill">
-        <div class="input-group">
-          <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
-          <span class="input-group-text" id="add2">Medical Conditions</span>
+    
+<div [ngStyle]="{'display': isModalOpen('ViewMedicalRecord') ? 'block' : 'none'}" id="ViewMedicalRecord" class="modal">
+  <div class="modal-content">
+    <span (click)="closeModal('ViewMedicalRecord')" class="close">&times;</span>
+    <form  class="row g-3 needs-validation" novalidate="">
+      <div *ngIf="medicalRecordProfile">
+        <div class="row g-3 needs-validation">
+          <div class="col-md-12"></div>
+  
+      
+
+            <!-- Allergies Section -->
+            <div class="col-md-10">
+              <div class="input-group has-validation">
+                <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                <span class="input-group-text" style="width:60%" id="add">Allergies</span>
+              </div>
+              <table class="table table-striped table-hover table-over-update">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>               
+                  <tr *ngFor="let tag of tagsAllergies; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ tag.designacao }}</td>
+                    <td>{{ tag.descricao }}</td>
+                    <td>{{ tag.status }}</td>
+                   
+                  </tr>                
+                </tbody>
+              </table>
+            </div>
+          
+  
+
+
+          <div class="col-mb-4"></div>
+
+
+          <!-- Medical Conditions Section -->
+          <div class="col-md-10">
+            <div class="input-group has-validation">
+              <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+              <span class="input-group-text" style="width:60%" id="add">Medical Conditions</span>
+            </div>
+            <table class="table table-striped table-hover table-over-update">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Code</th>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Status</th>
+                  <th>Symptoms</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let condition of tagsConditions; let i = index">
+                  <td>{{ i + 1 }}</td>
+                  <td>{{ condition.codigo }}</td>
+                  <td>{{ condition.designacao }}</td>
+                  <td>{{ condition.descricao }}</td>
+                  <td>{{ condition.status }}</td>
+                  <td>{{ condition.sintomas }}</td>
+                 
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        
+
+         
         </div>
-        <table class="table table-striped table-hover table-over">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Name</th>              
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let request of medicalConditions; let i = index" (click)="selectMedicalCondtion(request.id)" [ngClass]="{ 'selected-row': selectMedicalCondtion === request.id }">
-              <td>{{ i + 1 }}</td>           
-              <td>{{ request }}</td>               
-            </tr>
-          </tbody>
-        </table>
+
+       
+
+       
       </div>
-
-    </div> 
-
+    </form>
+     
   </div>
 </div>
 
